fix: added to cart button no longer overflows on smaller screens. fix path to image in footer.
use of css grid and width of fit-content seems to have ensured responsiveness of the container for the quantity input and add to cart button components on product pages. fixes #44

--- a/src/components/AddToCartButton/addToCartButton.module.css
+++ b/src/components/AddToCartButton/addToCartButton.module.css
@@ -3,6 +3,7 @@
   font-weight: 600;
   padding: 16px;
   width: 280px;
+  max-width: 100%;
   border-radius: 5px;
 }
 
@@ -45,5 +46,11 @@
 
   to {
     transform: rotate(360deg);
+  }
+}
+
+@media (max-width: 429px) {
+  .button {
+    width: 100%;
   }
 }
